--- a/tasks/.tko/repository.yaml
+++ b/tasks/.tko/repository.yaml
@@ -12,18 +12,19 @@ sources:
   type: clone
   branch: master
   cache_path: ''
-  cache_timestamp: '2025-12-09 18:43:48'
+  cache_timestamp: '2025-12-22 00:03:17'
   filters:
   - herança
 expanded:
 - poo@campanha-principal
 - poo@bloco_f-herança-i
-tasks: {}
+tasks:
+  poo@estacionamento: '{human:Amigo, alone:2}'
 flags:
   quests: 0
   tracks: 0
   tasks: 0
-  graph: 0
+  graph: 1
   xray: 0
 lang: py
 selected: poo@estacionamento
